Home page center alignment and firefox fix

--- a/Project/MusicUI/WebContent/css/musicStyle.css
+++ b/Project/MusicUI/WebContent/css/musicStyle.css
@@ -391,8 +391,7 @@ div#about-pg-ready-music a, div#classes-pg-ready-music a, div#musicHome-pg-ready
 	background-image: url(../Images/music_sprite.png);
 	width: 36px;
     height: 36px;
-    background-position-x: -217px;
-    background-position-y: -85px;
+    background-position: -217px -85px;
     background-size: 1000px;
 	float: left;
 	cursor: pointer;
@@ -440,8 +439,7 @@ div#about-pg-ready-music a, div#classes-pg-ready-music a, div#musicHome-pg-ready
 	background-image: url(../Images/music_sprite.png);
 	width: 36px;
     height: 36px;
-    background-position-x: -95px;
-    background-position-y: -85px;
+    background-position:-95px -85px;
     background-size: 1000px;
 	float: left;
 	cursor: pointer;
@@ -450,7 +448,7 @@ div#about-pg-ready-music a, div#classes-pg-ready-music a, div#musicHome-pg-ready
 }
 
 #toClassBut:hover {
-	background-position-y: -214px !important;
+	background-position: -95px -214px !important;
 }
 
 #schTimeline {
@@ -476,8 +474,7 @@ div#about-pg-ready-music a, div#classes-pg-ready-music a, div#musicHome-pg-ready
     background-image: url(../Images/classes_scheduleListImg.png);
     background-repeat: no-repeat;
     background-size: 3em;
-    background-position-x: 101%;
-    background-position-y: 1em;
+    background-position: 101% 1em;
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
@@ -582,8 +579,7 @@ div#about-pg-ready-music a, div#classes-pg-ready-music a, div#musicHome-pg-ready
 	background-image: url(../Images/music_sprite.png);
     width: 1.5em;
     height: 1em;
-    background-position-x: -525px;
-    background-position-y: -78px;
+    background-position: -525px -78px;
     background-size: 42em;
 	margin-left: 2.2em;
 }
@@ -592,8 +588,7 @@ div#about-pg-ready-music a, div#classes-pg-ready-music a, div#musicHome-pg-ready
 	background-image: url(../Images/music_sprite.png);
 	width: 1.5em;
 	height: 1em;
-    background-position-x: -560px;
-    background-position-y: -78px;
+    background-position: -560px -78px;
 	background-size: 42em;
 	margin-left: 2.2em;
 }
@@ -827,7 +822,7 @@ ul.subMenu li,ul.listHolder li{
 
 #main-menu{
 	padding-top: 2%;
-	padding-left: 13%;
+	margin-left: 7%;
 	color: black;
 }
 
@@ -1143,7 +1138,7 @@ ul.subMenu li,ul.listHolder li{
 	}
 	#main-menu{
 		width: 50%;
-	    margin: 4% 0;
+	    margin: 2% 0;
 	    padding: 0;
 	    float: left;
 	}
